# german-asr-pipeline

./: .gitignore  ARCHITECTURE.md  LICENSE  PROJECT_SUMMARY.md  README.md  pyproject.toml
configs/: pipeline.yaml  quick_test.yaml
notebooks/: 01_explore_data.ipynb  02_compare_models.ipynb
scripts/: run_audio_cleaning.py  run_baselines.py  run_evaluation.py  run_finetune.py  run_full_inference.py  run_ingestion.py  run_model_selection.py  run_preprocessing.py  run_split.py  run_validation.py
src/asr_pipeline/: __init__.py  benchmark.py  cli.py  evaluation.py  finetune.py  inference.py  ingestion.py  models.py  preprocessing.py  reporting.py  selection.py  split.py  utils.py  validation.py
tests/: __init__.py  test_models.py  test_preprocessing.py  test_utils.py
