[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "german-asr-pipeline"
version = "0.1.0"
description = "End-to-end German ASR pipeline with model comparison, fine-tuning, and inference"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Data Science Team"}
]
keywords = ["asr", "speech-recognition", "german", "nlp", "machine-learning"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "torch>=2.0.0",
    "torchaudio>=2.0.0",
    "transformers>=4.35.0",
    "datasets>=2.14.0",
    "accelerate>=0.24.0",
    "evaluate>=0.4.0",
    "jiwer>=3.0.0",
    "librosa>=0.10.0",
    "soundfile>=0.12.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "omegaconf>=2.3.0",
    "hydra-core>=1.3.0",
    "tqdm>=4.65.0",
    "pyarrow>=14.0.0",
    "fastparquet>=2023.0.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "scikit-learn>=1.3.0",
    "tensorboard>=2.14.0",
    "wandb>=0.15.0",
    "pydantic>=2.0.0",
    "rich>=13.0.0",
    "click>=8.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0",
    "pre-commit>=3.4.0",
]

[project.scripts]
asr-ingest = "asr_pipeline.cli:ingest"
asr-validate = "asr_pipeline.cli:validate"
asr-preprocess = "asr_pipeline.cli:preprocess"
asr-split = "asr_pipeline.cli:split"
asr-baseline = "asr_pipeline.cli:baseline"
asr-select = "asr_pipeline.cli:select"
asr-finetune = "asr_pipeline.cli:finetune"
asr-evaluate = "asr_pipeline.cli:evaluate"
asr-infer = "asr_pipeline.cli:infer"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311"]

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=asr_pipeline --cov-report=term-missing"
